tests/snapshots/generate__generate_embedded_regex_operation.snap
---
source: tests/tests/generate.rs
expression: contents
---
{
  "name": "EmbeddedMovieInfoLookup",
  "kind": "query",
  "sql": {
    "dialect": "postgres",
    "text": "select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'id',\n        \"movie_info_d37aaa02\".\"id\",\n        'info',\n        \"movie_info_d37aaa02\".\"info\"\n      )\n    ),\n    '[]'\n  ) as \"movie_info\"\nfrom\n  (\n    select\n      *\n    from\n      \"public\".\"movie_info\" as \"movie_info_d37aaa02\"\n    where\n      \"movie_info_d37aaa02\".\"id\" > 0\n    order by\n      \"movie_info_d37aaa02\".\"id\" asc\n    limit\n      2\n  ) as \"movie_info_d37aaa02\"",
    "variants": []
  },
  "result": {
    "fields": [
      {
        "path": "movie_info",
        "name": "movie_info",
        "parent_path": "",
        "kind": "array",
        "data_type": "object",
        "nullable": false
      },
      {
        "path": "movie_info.id",
        "name": "id",
        "parent_path": "movie_info",
        "kind": "scalar",
        "data_type": "int",
        "nullable": false
      },
      {
        "path": "movie_info.info",
        "name": "info",
        "parent_path": "movie_info",
        "kind": "scalar",
        "data_type": "text",
        "nullable": false
      }
    ]
  },
  "params": [],
  "input": [],
  "context": [],
  "dynamic_inputs": [],
  "policies": [],
  "handoffs": [],
  "source_map": [
    {
      "id": "EmbeddedMovieInfoLookup",
      "file": "src/movie-info.ts",
      "range": {
        "start": 75,
        "end": 192
      }
    }
  ]
}
