tests/snapshots/generate__generate_manifest.snap
---
source: tests/snapshot/generate.rs
expression: contents
---
{
  "version": 1,
  "operations": [
    {
      "name": "MovieInfoLookup",
      "kind": "query",
      "path": "operations/MovieInfoLookup.json",
      "hash": "2158335da2055485",
      "source": "queries/movie-info.dsql"
    }
  ],
  "fragments": []
}
