tests/snapshots/generate__generate_typescript_command_output.snap
---
source: tests/tests/generate.rs
expression: contents
---
export type DsqlOperation<Result = unknown> = {
    readonly name: string;
    readonly kind: "query";
    readonly sql: string;
    readonly result?: Result;
};
export type MovieInfoLookupResult = {
    movie_info: Array<{
        id: number;
        info: string;
        note: string | null;
        title: {
            title: string;
        };
        info_type: {
            info: string;
        };
    }>;
};

export const MovieInfoLookupOperation = {
    name: "MovieInfoLookup",
    kind: "query",
    sql: "select\n  COALESCE(\n    JSON_AGG(\n      JSON_BUILD_OBJECT(\n        'id',\n        \"movie_info_d37aaa02\".\"id\",\n        'info',\n        \"movie_info_d37aaa02\".\"info\",\n        'note',\n        \"movie_info_d37aaa02\".\"note\",\n        'title',\n        \"title_json_85df456e\".\"title\",\n        'info_type',\n        \"info_type_json_3587486e\".\"info_type\"\n      )\n    ),\n    '[]'\n  ) as \"movie_info\"\nfrom\n  (\n    select\n      *\n    from\n      \"public\".\"movie_info\" as \"movie_info_d37aaa02\"\n    where\n      \"movie_info_d37aaa02\".\"id\" > 0\n    order by\n      \"movie_info_d37aaa02\".\"id\" asc\n    limit\n      2\n  ) as \"movie_info_d37aaa02\"\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT('title', \"title_85df456e\".\"title\") as \"title\"\n    from\n      \"public\".\"title\" as \"title_85df456e\"\n    where\n      \"title_85df456e\".\"id\" = \"movie_info_d37aaa02\".\"movie_id\"\n      and \"title_85df456e\".\"episode_nr\" = 100\n  ) as \"title_json_85df456e\" on true\n  left join LATERAL (\n    select\n      JSON_BUILD_OBJECT('info', \"info_type_3587486e\".\"info\") as \"info_type\"\n    from\n      \"public\".\"info_type\" as \"info_type_3587486e\"\n    where\n      \"info_type_3587486e\".\"id\" = \"movie_info_d37aaa02\".\"info_type_id\"\n  ) as \"info_type_json_3587486e\" on true"
} as const satisfies DsqlOperation<MovieInfoLookupResult>;
export const operations = [
    MovieInfoLookupOperation
] as const;
