tests/snapshots/generate__generate_typescript_dsql_output.snap
---
source: tests/tests/generate.rs
expression: contents
---
import type { DsqlOperation } from "./operations";
import { MovieInfoLookupOperation } from "./operations";

export type DsqlOperationForSource<Source extends string> =
    Source extends keyof DsqlOperationBySource
    ? DsqlOperationBySource[Source]
    : DsqlOperation;

export function dsql<const Source extends string>(
    source: Source,
): DsqlOperationForSource<Source>;
export type DsqlOperationBySource = {
    readonly "query MovieInfoLookup {\n  movie_info(where .id > 0 order by id asc limit 2) {\n    id\n    info\n    note\n    title(where .episode_nr == 100) {\n      title\n    }\n    info_type {\n      info\n    }\n  }\n}": typeof MovieInfoLookupOperation;
};
export function dsql(strings: TemplateStringsArray, ...values: never[]): DsqlOperation;
export function dsql(
    input: string | TemplateStringsArray,
    ...values: never[]
): DsqlOperation {
    if (values.length > 0) {
        throw new Error("dsql templates do not support JavaScript interpolation");
    }

    const source = typeof input === "string" ? input : (input.raw[0] ?? "");
    const name = /\bquery\s+([A-Za-z_][A-Za-z0-9_]*)\b/.exec(source)?.[1];
    return {
        id: "<untransformed>",
        name: name ?? "<untransformed>",
        kind: "query",
        sql: "",
    };
}
