tests/snapshots/generate__generate_typescript_index_output.snap
---
source: tests/tests/generate.rs
expression: contents
---
export * from "./operations";
export * from "./dsql";
