tests/snapshots/generate__generate_typescript_operations_output.snap
---
source: tests/snapshot/generate.rs
expression: contents
---
export type DsqlOperation<
    Result = unknown,
    Params = Record<string, never>,
    Input = Record<string, never>,
> = {
    readonly id: string;
    readonly name: string;
    readonly kind: "query";
    readonly result?: Result;
    readonly params?: Params;
    readonly input?: Input;
};

export type DsqlOperationResult<Operation> =
    Operation extends DsqlOperation<infer Result, any, any> ? Result : never;

export type DsqlOperationParams<Operation> =
    Operation extends DsqlOperation<any, infer Params, any>
    ? Params
    : Record<string, never>;

export type DsqlOperationInput<Operation> =
    Operation extends DsqlOperation<any, any, infer Input>
    ? Input
    : Record<string, never>;

export type DsqlFragmentDefinition<
    Result = unknown,
    Params = Record<string, never>,
    Input = Record<string, never>,
> = {
    readonly name: string;
    readonly kind: "fragment";
    readonly table: string;
    readonly result?: Result;
    readonly params?: Params;
    readonly input?: Input;
};

export type DsqlFragment<Fragment> =
    Fragment extends DsqlFragmentDefinition<infer Result, any, any>
    ? Result
    : never;

export type DsqlFragmentParams<Fragment> =
    Fragment extends DsqlFragmentDefinition<any, infer Params, any>
    ? Params
    : Record<string, never>;

export type DsqlFragmentInput<Fragment> =
    Fragment extends DsqlFragmentDefinition<any, any, infer Input>
    ? Input
    : Record<string, never>;

export type DsqlFragmentVariables<Fragment> =
    (DsqlFragmentParams<Fragment> extends Record<string, never>
        ? { readonly params?: DsqlFragmentParams<Fragment> }
        : { readonly params: DsqlFragmentParams<Fragment> }) &
    (DsqlFragmentInput<Fragment> extends Record<string, never>
        ? { readonly input?: DsqlFragmentInput<Fragment> }
        : { readonly input: DsqlFragmentInput<Fragment> });
export type MovieInfoLookupResult = {
    movie_info: Array<{
        id: number;
        info: string;
        note: string | null;
        title: {
            title: string;
        } | null;
        info_type: {
            info: string;
        };
    }>;
};
export type MovieInfoLookupParams = Record<string, never>;
export type MovieInfoLookupInput = Record<string, never>;

export const MovieInfoLookupOperation: DsqlOperation<MovieInfoLookupResult, MovieInfoLookupParams, MovieInfoLookupInput> = {
    id: "4704b00f3afcd417",
    name: "MovieInfoLookup",
    kind: "query"
};
export const operations = [
    MovieInfoLookupOperation
] as const;
